[package]
name = "vac-spec-sync"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }

[dependencies]
vac-paths = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }


[lints]
workspace = true
