[package]
name = "vac-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vac_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
arg0-helpers = [
    "vac-apply-patch",
    "vac-exec-server",
    "vac-linux-sandbox",
    "vac-sandboxing",
    "vac-shell-escalation",
    "vac-utils-absolute-path",
]

[dependencies]
anyhow = { workspace = true }
vac-apply-patch = { workspace = true, optional = true }
vac-exec-server = { workspace = true, optional = true }
vac-linux-sandbox = { workspace = true, optional = true }
vac-sandboxing = { workspace = true, optional = true }
vac-shell-escalation = { workspace = true, optional = true }
vac-utils-absolute-path = { workspace = true, optional = true }
vac-utils-home-dir = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
