[package]
edition.workspace = true
license.workspace = true
name = "vac-features"
version.workspace = true

[lib]
doctest = false
name = "vac_features"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
vac-otel = { workspace = true }
vac-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
