[package]
name = "vac-file-system"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
vac-protocol = { workspace = true }
vac-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
