[package]
name = "vac-git-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
vac-file-system = { workspace = true }
vac-protocol = { workspace = true }
vac-utils-absolute-path = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
gix = { workspace = true }
once_cell = { workspace = true }
regex = "1"
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
similar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "rt", "time"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
