[package]
name = "vac-install-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vac_install_context"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
vac-utils-home-dir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
