[package]
edition.workspace = true
license.workspace = true
name = "vac-protocol"
version.workspace = true

[lib]
name = "vac_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
vac-async-utils = { workspace = true }
vac-execpolicy = { workspace = true }
vac-utils-absolute-path = { workspace = true }
vac-utils-image = { workspace = true }
vac-utils-string = { workspace = true }
vac-utils-template = { workspace = true }
encoding_rs = { workspace = true }
globset = { workspace = true }
icu_decimal = { workspace = true }
icu_locale_core = { workspace = true }
icu_provider = { workspace = true, features = ["sync"] }
quick-xml = { workspace = true, features = ["serialize"] }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros", "base64"] }
strum = { workspace = true }
strum_macros = { workspace = true }
sys-locale = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true, features = ["serde", "v7", "v4"] }
wildmatch = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
http = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[package.metadata.cargo-shear]
# Required because:
# `icu_provider`: contains a required `sync` feature for `icu_decimal`
# `strum`: as strum_macros in non-nightly builds
ignored = ["icu_provider", "strum"]
