[package]
edition.workspace = true
license.workspace = true
name = "vac-rollout-trace"
version.workspace = true

[lib]
doctest = false
name = "vac_rollout_trace"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
vac-code-mode = { workspace = true }
vac-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
