[package]
edition.workspace = true
license.workspace = true
name = "vac-rollout"
version.workspace = true

[lib]
doctest = false
name = "vac_rollout"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
vac-file-search = { workspace = true }
vac-git-utils = { workspace = true }
vac-login = { workspace = true }
vac-otel = { workspace = true }
vac-protocol = { workspace = true }
vac-state = { workspace = true }
vac-utils-path = { workspace = true }
vac-utils-string = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
] }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt",
    "sync",
    "time",
] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
