[package]
autobins = false
name = "vac-runtime-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vac_runtime_protocol"
path = "src/lib.rs"

[[bin]]
name = "vac-runtime-protocol-export"
path = "src/bin/export.rs"

[[bin]]
name = "vac-runtime-protocol-write-schema-fixtures"
path = "src/bin/write_schema_fixtures.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
vac-experimental-api-macros = { workspace = true }
vac-protocol = { workspace = true }
vac-shell-command = { workspace = true }
vac-utils-absolute-path = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
ts-rs = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
anyhow = { workspace = true }
vac-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
