[package]
name = "vac-terminal-detection"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vac_terminal_detection"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
