[package]
edition.workspace = true
license.workspace = true
name = "vac-thread-store"
version.workspace = true

[lib]
name = "vac_thread_store"
path = "src/lib.rs"

[[example]]
name = "generate-proto"
path = "examples/generate-proto.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
vac-git-utils = { workspace = true }
vac-protocol = { workspace = true }
vac-rollout = { workspace = true }
vac-state = { workspace = true }
prost = "0.14.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["router", "transport"] }
tonic-prost-build = { version = "=0.14.3", default-features = false, features = ["transport"] }
uuid = { workspace = true }
